# signal-aware-rag

./: .gitignore  README.md  app.py  pyproject.toml
events/: extractor.py
scripts/: run_experiments.py
src/: pipeline.py
src/agents/: agents.py
src/evaluation/: benchmark.py  llm_judge.py  metrics.py  run_evaluation.py
src/events/: extractor.py  knowledge_graph.py  query_event.py
src/generation/: base_generator.py  openai_generator.py
src/ingestion/: synthetic_data.py
src/retrieval/: embedder.py  faiss_index.py  retriever.py
src/signals/: query_signals.py
src/utils/: print_utils.py
